--- a/skills.html
+++ b/skills.html
@@ -34,7 +34,7 @@
             </defs>
         </svg>
         <div id="tooltip" class="tooltip">Map</div>
-        <div id="tooltipC" class="tooltip">dfd</div>
+        <div id="tooltipC" class="tooltip"></div>
     
 </body>
 </html>
